--- a/AYS/src/app/users/user-list/user-list.component.html
+++ b/AYS/src/app/users/user-list/user-list.component.html
@@ -1,3 +1,9 @@
-<p>
-  user-list works!
-</p>
+<kendo-grid [data]="gridData" [pageSize]="state.take" [skip]="state.skip" [sort]="state.sort" [filter]="state.filter" [sortable]="true"
+  [pageable]="true" [filterable]="true" (dataStateChange)="dataStateChange($event)" [height]="410">
+  <kendo-grid-column field="DoorNumber" title="Kapı No" width="40">
+  </kendo-grid-column>
+  <kendo-grid-column field="FirstName" title="Adı" width="40">
+  </kendo-grid-column>
+  <kendo-grid-column field="LastName" title="Soyadı" width="40">
+  </kendo-grid-column>
+</kendo-grid>
